<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFichaOferta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tV_Nombre_Ficha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/nameEMP"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tV_Descrip_Ficha"
                        android:layout_width="266dp"
                        android:layout_height="76dp"
                        android:layout_marginTop="56dp"
                        android:text="@string/descripcionEMP"
                        app:layout_constraintStart_toStartOf="@+id/textView12"
                        app:layout_constraintTop_toBottomOf="@+id/textView12" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="94dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="54dp"
                        android:layout_marginTop="45dp"
                        android:text="@string/categoriaEMP"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tV_Nombre_Ficha" />

                    <TextView
                        android:id="@+id/tV_Categoria_Ficha"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="37dp"
                        android:text="TextView"
                        app:layout_constraintBottom_toBottomOf="@+id/textView12"
                        app:layout_constraintStart_toEndOf="@+id/textView12"
                        app:layout_constraintTop_toTopOf="@+id/textView12" />

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tV_Descrip_Ficha">

                        <TextView
                            android:id="@+id/tv_UbiName"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/ubiName" />

                        <fragment
                            android:id="@+id/google_map_vista"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="200dp"
                            android:layout_height="200dp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/contactos"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5">

                        <TextView
                            android:id="@+id/tV_Correo_Ficha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/correoEMP" />

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/tV_Telef_Ficha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telEMP" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/bt_Edit_Ficha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/editar" />

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="match_parent" />

                        <Button
                            android:id="@+id/bt_Del_Ficha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/borrar" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <Button
                        android:id="@+id/bt_Volver_Ficha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/volver" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>