<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/authLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <EditText
                    android:id="@+id/eT_Email_Log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/darker_gray" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <EditText
                    android:id="@+id/eT_Password_Log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPersonName"
                    android:password="true"
                    android:textColorHint="@android:color/darker_gray" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_LoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/login" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <Button
                    android:id="@+id/bt_LoginGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@mipmap/google"
                    android:text="@string/google"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/bt_Formu_Ofer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@mipmap/logo"
                        android:onClick="onClick_Ofert"
                        android:text="@string/ofert"
                        android:textColor="@color/Link"
                        app:layout_constraintEnd_toEndOf="@+id/bt_Formu_Demand"
                        app:layout_constraintStart_toStartOf="@+id/bt_Formu_Demand"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/bt_Formu_Demand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:onClick="onClick_Demand"
                        android:text="@string/demand"
                        android:textColor="@color/Link"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bt_Formu_Ofer" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>